crates/cockpitctl-render/tests/snapshots/golden_comment_stability__golden_comment_all_four_verdicts.snap
---
source: crates/cockpitctl-render/tests/golden_comment_stability.rs
assertion_line: 624
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `alpha` | ✅ pass | yes | `artifacts/alpha/report.json` · `artifacts/alpha/comment.md` |
| `beta` | ⚠️ warn | yes | `artifacts/beta/report.json` · `artifacts/beta/comment.md` |
| `gamma` | ❌ fail | yes | `artifacts/gamma/report.json` · `artifacts/gamma/comment.md` |
| `delta` | ⏭ skip | no | `artifacts/delta/report.json` · `artifacts/delta/comment.md` |

### Highlights

(showing up to **10**)

1. ❌ **gamma**: `T-FAIL` at `tests/main.rs:50` — Message for T-FAIL
2. ⚠️ **beta**: `L-WARN` at `src/lib.rs:20` — Message for L-WARN

### Annotations

1. ❌ **gamma**: `T-FAIL` at `tests/main.rs:50` — Message for T-FAIL
2. ⚠️ **beta**: `L-WARN` at `src/lib.rs:20` — Message for L-WARN

### Build

- `alpha`: ✅ pass · report `artifacts/alpha/report.json` · comment `artifacts/alpha/comment.md`

### Lint

- `beta`: ⚠️ warn · report `artifacts/beta/report.json` · comment `artifacts/beta/comment.md`

### Tests

- `gamma`: ❌ fail · report `artifacts/gamma/report.json` · comment `artifacts/gamma/comment.md`

### Optional

- `delta`: ⏭ skip · report `artifacts/delta/report.json` · comment `artifacts/delta/comment.md`

<!-- cockpit:end -->
