crates/cockpitctl-render/tests/snapshots/golden_comment_stability__golden_comment_many_findings.snap
---
source: crates/cockpitctl-render/tests/golden_comment_stability.rs
assertion_line: 328
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `clippy` | ⚠️ warn | yes | `artifacts/clippy/report.json` · `artifacts/clippy/comment.md` |
| `tests` | ❌ fail | yes | `artifacts/tests/report.json` · `artifacts/tests/comment.md` |
| `covguard` | ✅ pass | no | `artifacts/covguard/report.json` · `artifacts/covguard/comment.md` |

### Highlights

(showing up to **10**)

1. ❌ **tests**: `TEST-FAIL` at `tests/api.rs:100` — Message for TEST-FAIL
2. ⚠️ **clippy**: `W-UNUSED` at `src/lib.rs:5` — Message for W-UNUSED
3. ⚠️ **clippy**: `W-COMPLEXITY` at `src/main.rs:42` — Message for W-COMPLEXITY
4. ℹ️ **covguard**: `COV-INFO` at `src/utils.rs:1` — Message for COV-INFO

### Annotations

1. ❌ **tests**: `TEST-FAIL` at `tests/api.rs:100` — Message for TEST-FAIL
2. ⚠️ **clippy**: `W-UNUSED` at `src/lib.rs:5` — Message for W-UNUSED
3. ⚠️ **clippy**: `W-COMPLEXITY` at `src/main.rs:42` — Message for W-COMPLEXITY
4. ℹ️ **covguard**: `COV-INFO` at `src/utils.rs:1` — Message for COV-INFO

### Lint

- `clippy`: ⚠️ warn · report `artifacts/clippy/report.json` · comment `artifacts/clippy/comment.md`
  - repro: `cargo clippy`

### Tests

- `tests`: ❌ fail · report `artifacts/tests/report.json` · comment `artifacts/tests/comment.md`
  - repro: `cargo test`

### Coverage

- `covguard`: ✅ pass · report `artifacts/covguard/report.json` · comment `artifacts/covguard/comment.md`

<!-- cockpit:end -->
