crates/cockpitctl-render/tests/snapshots/golden_comment_stability__golden_comment_mixed_pass_warn_fail.snap
---
source: crates/cockpitctl-render/tests/golden_comment_stability.rs
assertion_line: 494
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `build` | ✅ pass | yes | `artifacts/build/report.json` · `artifacts/build/comment.md` |
| `lint` | ⚠️ warn | yes | `artifacts/lint/report.json` · `artifacts/lint/comment.md` |
| `coverage` | ✅ pass | no | `artifacts/coverage/report.json` · `artifacts/coverage/comment.md` |

### Highlights

(showing up to **10**)

1. ⚠️ **lint**: `W-UNUSED` at `src/lib.rs:10` — Message for W-UNUSED

### Annotations

1. ⚠️ **lint**: `W-UNUSED` at `src/lib.rs:10` — Message for W-UNUSED

### Build

- `build`: ✅ pass · report `artifacts/build/report.json` · comment `artifacts/build/comment.md`
  - repro: `cargo build`

### Lint

- `lint`: ⚠️ warn · report `artifacts/lint/report.json` · comment `artifacts/lint/comment.md`
  - repro: `cargo clippy`

### Coverage

- `coverage`: ✅ pass · report `artifacts/coverage/report.json` · comment `artifacts/coverage/comment.md`

<!-- cockpit:end -->
