crates/cockpitctl-render/tests/snapshots/golden_comment_stability__golden_comment_no_findings.snap
---
source: crates/cockpitctl-render/tests/golden_comment_stability.rs
assertion_line: 138
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|

### Highlights

_No highlights._

### Annotations

_No annotations._

<!-- cockpit:end -->
