crates/cockpitctl-render/tests/snapshots/golden_comment_stability__golden_comment_single_finding.snap
---
source: crates/cockpitctl-render/tests/golden_comment_stability.rs
assertion_line: 196
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `builddiag` | ❌ fail | yes | `artifacts/builddiag/report.json` · `artifacts/builddiag/comment.md` |

### Highlights

(showing up to **10**)

1. ❌ **builddiag**: `E0001` at `src/main.rs:42` — Message for E0001

### Annotations

1. ❌ **builddiag**: `E0001` at `src/main.rs:42` — Message for E0001

### Build

- `builddiag`: ❌ fail · report `artifacts/builddiag/report.json` · comment `artifacts/builddiag/comment.md`
  - repro: `cargo build`

<!-- cockpit:end -->
