crates/cockpitctl-render/tests/snapshots/golden_comment_stability__golden_comment_truncated_findings.snap
---
source: crates/cockpitctl-render/tests/golden_comment_stability.rs
assertion_line: 396
expression: md
---
<!-- cockpit:begin -->
## Cockpit

This comment is generated by `cockpitctl`. Details live in `artifacts/`.

### Summary

| Sensor | Status | Blocking | Notes |
|---|---:|---:|---|
| `scanner` | ❌ fail | yes | `artifacts/scanner/report.json` · `artifacts/scanner/comment.md` · _truncated_ |

### Highlights

(showing up to **2**)

1. ❌ **scanner**: `CVE-2024-0001` at `Cargo.lock:100` — Message for CVE-2024-0001
2. ❌ **scanner**: `CVE-2024-0002` at `Cargo.lock:200` — Message for CVE-2024-0002

### Annotations

1. ❌ **scanner**: `CVE-2024-0001` at `Cargo.lock:100` — Message for CVE-2024-0001
2. ❌ **scanner**: `CVE-2024-0002` at `Cargo.lock:200` — Message for CVE-2024-0002

### Security

- `scanner`: ❌ fail · report `artifacts/scanner/report.json` · comment `artifacts/scanner/comment.md`
  - repro: `trivy scan`

<!-- cockpit:end -->
